// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Input Text Component should render a hint when a hint is passed in 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
    <span
      class="form-hint"
    >
      Testing hint
    </span>
  </label>
  <textarea
    class="form-control"
    id="ip"
    name="ip"
    rows="4"
  >
    someText
  </textarea>
</div>
`;

exports[`The Input Text Component should render an error when an error is passed in 1`] = `
<div
  class="form-group form-group-error"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
    <span
      class="error-message"
    >
      Testing error
    </span>
  </label>
  <textarea
    class="form-control form-control-error"
    id="ip"
    name="ip"
    rows="4"
  >
    someText
  </textarea>
</div>
`;

exports[`The Input Text Component should render as a checked input correctly 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
  </label>
  <textarea
    class="form-control"
    id="ip"
    name="ip"
    rows="4"
  >
    someText
  </textarea>
</div>
`;

exports[`The Input Text Component should render cols & rows 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
  </label>
  <textarea
    class="form-control"
    cols="10"
    id="ip"
    name="ip"
    rows="8"
  >
    someText
  </textarea>
</div>
`;

exports[`The Input Text Component should render correctly when a value is passed in 1`] = `
<div
  class="form-group"
>
  <label
    class="form-label"
    for="ip"
  >
    <span
      class="form-label-bold"
    >
      ip
    </span>
  </label>
  <textarea
    class="form-control"
    id="ip"
    name="ip"
    rows="4"
  >
    someText
  </textarea>
</div>
`;
